--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,12 +48,11 @@ button:focus,
 }
 
 .form-check-input:checked {
-  background-color: #ff6b81;
-  border-color: #ff6b81;
+  background-color: #ea0000;
+  border-color: #ea0000;
 }
 
 select {
-  -webkit-writing-mode: horizontal-tb !important;
   text-rendering: auto;
   color: #081828;
   letter-spacing: normal;
@@ -899,7 +898,7 @@ ol {
   padding-top: 180px;
   z-index: 2;
   text-align: left;
-  background-color: #ff6b81;
+  background-color: #ea0000;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1043,7 +1042,7 @@ ol {
   font-weight: 600;
   display: block;
   margin-bottom: 8px;
-  color: #ff6b81;
+  color: #ea0000;
   text-transform: uppercase;
 }
 
@@ -1118,7 +1117,7 @@ ol {
   bottom: -1px;
   height: 2px;
   width: 50px;
-  background: #ff6b81;
+  background: #ea0000;
   content: "";
 }
 
@@ -1137,7 +1136,7 @@ ol {
   width: 45px;
   height: 45px;
   line-height: 45px;
-  background: #ff6b81;
+  background: #ea0000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1234,7 +1233,7 @@ ol {
 
 .pagination .pagination-list li.active a,
 .pagination .pagination-list li:hover a {
-  background: #ff6b81;
+  background: #ea0000;
   color: #fff;
   border-color: transparent;
 }
@@ -1254,7 +1253,7 @@ ol {
   font-size: 15px;
   font-weight: 600;
   padding: 13px 30px;
-  background-color: #ff6b81;
+  background-color: #ea0000;
   color: #fff;
   border: none;
   -webkit-transition: 0.2s;
@@ -1319,7 +1318,7 @@ ol {
 
 .button .btn-alt:hover {
   background-color: #fff !important;
-  color: #ff6b81 !important;
+  color: #ea0000 !important;
 }
 
 .align-left {
@@ -1367,7 +1366,7 @@ ol {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background: #ff6b81;
+  background: #ea0000;
   -webkit-animation: preloader-fx 1.6s linear infinite;
   animation: preloader-fx 1.6s linear infinite;
 }
@@ -1439,16 +1438,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ff6b81;
+    color: #ea0000;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1472,7 +1471,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1490,7 +1489,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1500,13 +1499,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ff6b81;
+    color: #ea0000;
   }
 }
 
@@ -1533,16 +1532,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ff6b81;
+    color: #ea0000;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1566,7 +1565,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1584,7 +1583,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1594,13 +1593,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ea0000 !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ff6b81;
+    color: #ea0000;
   }
 }
 
@@ -1619,7 +1618,7 @@ ol {
 
 .header .button .btn:hover {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .header .navbar-brand img {
@@ -1649,7 +1648,7 @@ ol {
 }
 
 .header.sticky .button .btn {
-  background-color: #ff6b81;
+  background-color: #ea0000;
   color: #fff;
   border-color: transparent;
 }
@@ -1681,7 +1680,7 @@ ol {
 }
 
 .sticky .navbar .navbar-nav .nav-item a.active {
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .sticky .navbar .navbar-nav .nav-item a {
@@ -1712,7 +1711,7 @@ ol {
 .navbar-area.sticky {
   position: fixed;
   z-index: 99;
-  background: #ff6b81;
+  background: #ea0000;
   -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   -webkit-transition: all 0.3s ease-out 0s;
@@ -1786,7 +1785,7 @@ ol {
 }
 
 .sticky .navbar-nav .nav-item:hover a {
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .navbar-nav .nav-item a {
@@ -1915,7 +1914,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .navbar-nav .nav-item .sub-menu.left-menu {
@@ -1942,7 +1941,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu > li.active > a {
-  color: #ff6b81 !important;
+  color: #ea0000 !important;
 }
 
 .navbar-nav .nav-item .sub-menu > li > a {
@@ -1978,7 +1977,7 @@ ol {
 .hero-area {
   position: relative;
   padding: 180px 0 120px 0;
-  background: #ff6b81;
+  background: #ea0000;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2041,7 +2040,7 @@ ol {
 
 .hero-area .hero-content .button .btn {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ea0000;
   margin-right: 12px;
 }
 
@@ -2061,7 +2060,7 @@ ol {
 
 .hero-area .hero-content .button .btn.btn-alt:hover {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 @media (max-width: 767px) {
@@ -2087,7 +2086,7 @@ ol {
   width: 50px;
   line-height: 50px;
   text-align: center;
-  color: #ff6b81;
+  color: #ea0000;
   background-color: #fff;
   border-radius: 50%;
   margin-left: 10px;
@@ -2243,7 +2242,7 @@ ol {
   line-height: 60px;
   text-align: center;
   display: inline-block;
-  background-color: #ff6b81;
+  background-color: #ea0000;
   color: #fff;
   font-size: 20px;
   border-radius: 7px;
@@ -2266,7 +2265,7 @@ ol {
     Our Achievement CSS
 ========================================*/
 .our-achievement {
-  background-color: #ff6b81;
+  background-color: #ea0000;
   text-align: center;
   padding: 130px 0;
 }
@@ -2404,7 +2403,7 @@ ol {
 }
 
 .pricing-table .single-table .table-head .button .btn:hover {
-  background-color: #ff6b81;
+  background-color: #ea0000;
   color: #fff;
 }
 
@@ -2431,7 +2430,7 @@ ol {
 }
 
 .pricing-table .single-table .table-content .table-list li i {
-  color: #ff6b81;
+  color: #ea0000;
   font-size: 14px;
   position: absolute;
   left: 0;
@@ -2442,7 +2441,7 @@ ol {
     Call To Action CSS
 ========================================*/
 .call-action {
-  background-color: #ff6b81;
+  background-color: #ea0000;
 }
 
 .call-action .cta-content {
@@ -2507,7 +2506,7 @@ ol {
 
 .call-action .cta-content .button .btn {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .call-action .cta-content .button .btn:hover {
@@ -2547,7 +2546,7 @@ ol {
 
 .error-area .error-content h1 {
   font-size: 100px;
-  color: #ff6b81;
+  color: #ea0000;
   margin-bottom: 25px;
   font-weight: 800;
   line-height: 100px;
@@ -2682,7 +2681,7 @@ ol {
 }
 
 .footer .single-footer.f-about .social li a:hover {
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .footer .single-footer.f-about .social li:last-child {
@@ -2706,7 +2705,7 @@ ol {
 }
 
 .footer .single-footer.f-about .copyright-text a:hover {
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .footer .single-footer.f-link li {
@@ -2725,7 +2724,7 @@ ol {
 }
 
 .footer .single-footer.f-link li a:hover {
-  color: #ff6b81;
+  color: #ea0000;
 }
 
 .footer .single-footer h3 {
@@ -2826,7 +2825,7 @@ ol {
 }
 
 .footer .footer-newsletter .title p a {
-  color: #ff6b81;
+  color: #ea0000;
   text-decoration: underline;
 }
 
@@ -2936,7 +2935,7 @@ ol {
 
 .footer .footer-newsletter .newsletter-form .button .btn {
   display: inline-block;
-  background: #ff6b81;
+  background: #ea0000;
   color: #fff;
   height: 48px;
   line-height: 48px;
@@ -2948,6 +2947,6 @@ ol {
 }
 
 .footer .footer-newsletter .newsletter-form .button .btn:hover {
-  color: #ff6b81;
+  color: #ea0000;
   background-color: #fff;
 }
