--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,11 +48,12 @@ button:focus,
 }
 
 .form-check-input:checked {
-  background-color: #ea0000;
-  border-color: #ea0000;
+  background-color: #ff6b81;
+  border-color: #ff6b81;
 }
 
 select {
+  -webkit-writing-mode: horizontal-tb !important;
   text-rendering: auto;
   color: #081828;
   letter-spacing: normal;
@@ -898,7 +899,7 @@ ol {
   padding-top: 180px;
   z-index: 2;
   text-align: left;
-  background-color: #ea0000;
+  background-color: #ff6b81;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1042,7 +1043,7 @@ ol {
   font-weight: 600;
   display: block;
   margin-bottom: 8px;
-  color: #ea0000;
+  color: #ff6b81;
   text-transform: uppercase;
 }
 
@@ -1117,7 +1118,7 @@ ol {
   bottom: -1px;
   height: 2px;
   width: 50px;
-  background: #ea0000;
+  background: #ff6b81;
   content: "";
 }
 
@@ -1136,7 +1137,7 @@ ol {
   width: 45px;
   height: 45px;
   line-height: 45px;
-  background: #ea0000;
+  background: #ff6b81;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1233,7 +1234,7 @@ ol {
 
 .pagination .pagination-list li.active a,
 .pagination .pagination-list li:hover a {
-  background: #ea0000;
+  background: #ff6b81;
   color: #fff;
   border-color: transparent;
 }
@@ -1253,7 +1254,7 @@ ol {
   font-size: 15px;
   font-weight: 600;
   padding: 13px 30px;
-  background-color: #ea0000;
+  background-color: #ff6b81;
   color: #fff;
   border: none;
   -webkit-transition: 0.2s;
@@ -1318,7 +1319,7 @@ ol {
 
 .button .btn-alt:hover {
   background-color: #fff !important;
-  color: #ea0000 !important;
+  color: #ff6b81 !important;
 }
 
 .align-left {
@@ -1366,7 +1367,7 @@ ol {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background: #ea0000;
+  background: #ff6b81;
   -webkit-animation: preloader-fx 1.6s linear infinite;
   animation: preloader-fx 1.6s linear infinite;
 }
@@ -1438,16 +1439,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ea0000;
+    color: #ff6b81;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1471,7 +1472,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1489,7 +1490,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1499,13 +1500,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ea0000;
+    color: #ff6b81;
   }
 }
 
@@ -1532,16 +1533,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ea0000;
+    color: #ff6b81;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1565,7 +1566,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1583,7 +1584,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1593,13 +1594,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ea0000 !important;
+    color: #ff6b81 !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ea0000;
+    color: #ff6b81;
   }
 }
 
@@ -1618,7 +1619,7 @@ ol {
 
 .header .button .btn:hover {
   background-color: #fff;
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .header .navbar-brand img {
@@ -1648,7 +1649,7 @@ ol {
 }
 
 .header.sticky .button .btn {
-  background-color: #ea0000;
+  background-color: #ff6b81;
   color: #fff;
   border-color: transparent;
 }
@@ -1680,7 +1681,7 @@ ol {
 }
 
 .sticky .navbar .navbar-nav .nav-item a.active {
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .sticky .navbar .navbar-nav .nav-item a {
@@ -1711,7 +1712,7 @@ ol {
 .navbar-area.sticky {
   position: fixed;
   z-index: 99;
-  background: #ea0000;
+  background: #ff6b81;
   -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   -webkit-transition: all 0.3s ease-out 0s;
@@ -1785,7 +1786,7 @@ ol {
 }
 
 .sticky .navbar-nav .nav-item:hover a {
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .navbar-nav .nav-item a {
@@ -1914,7 +1915,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .navbar-nav .nav-item .sub-menu.left-menu {
@@ -1941,7 +1942,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu > li.active > a {
-  color: #ea0000 !important;
+  color: #ff6b81 !important;
 }
 
 .navbar-nav .nav-item .sub-menu > li > a {
@@ -1977,7 +1978,7 @@ ol {
 .hero-area {
   position: relative;
   padding: 180px 0 120px 0;
-  background: #ea0000;
+  background: #ff6b81;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2040,7 +2041,7 @@ ol {
 
 .hero-area .hero-content .button .btn {
   background-color: #fff;
-  color: #ea0000;
+  color: #ff6b81;
   margin-right: 12px;
 }
 
@@ -2060,7 +2061,7 @@ ol {
 
 .hero-area .hero-content .button .btn.btn-alt:hover {
   background-color: #fff;
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 @media (max-width: 767px) {
@@ -2086,7 +2087,7 @@ ol {
   width: 50px;
   line-height: 50px;
   text-align: center;
-  color: #ea0000;
+  color: #ff6b81;
   background-color: #fff;
   border-radius: 50%;
   margin-left: 10px;
@@ -2242,7 +2243,7 @@ ol {
   line-height: 60px;
   text-align: center;
   display: inline-block;
-  background-color: #ea0000;
+  background-color: #ff6b81;
   color: #fff;
   font-size: 20px;
   border-radius: 7px;
@@ -2265,7 +2266,7 @@ ol {
     Our Achievement CSS
 ========================================*/
 .our-achievement {
-  background-color: #ea0000;
+  background-color: #ff6b81;
   text-align: center;
   padding: 130px 0;
 }
@@ -2403,7 +2404,7 @@ ol {
 }
 
 .pricing-table .single-table .table-head .button .btn:hover {
-  background-color: #ea0000;
+  background-color: #ff6b81;
   color: #fff;
 }
 
@@ -2430,7 +2431,7 @@ ol {
 }
 
 .pricing-table .single-table .table-content .table-list li i {
-  color: #ea0000;
+  color: #ff6b81;
   font-size: 14px;
   position: absolute;
   left: 0;
@@ -2441,7 +2442,7 @@ ol {
     Call To Action CSS
 ========================================*/
 .call-action {
-  background-color: #ea0000;
+  background-color: #ff6b81;
 }
 
 .call-action .cta-content {
@@ -2506,7 +2507,7 @@ ol {
 
 .call-action .cta-content .button .btn {
   background-color: #fff;
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .call-action .cta-content .button .btn:hover {
@@ -2546,7 +2547,7 @@ ol {
 
 .error-area .error-content h1 {
   font-size: 100px;
-  color: #ea0000;
+  color: #ff6b81;
   margin-bottom: 25px;
   font-weight: 800;
   line-height: 100px;
@@ -2681,7 +2682,7 @@ ol {
 }
 
 .footer .single-footer.f-about .social li a:hover {
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .footer .single-footer.f-about .social li:last-child {
@@ -2705,7 +2706,7 @@ ol {
 }
 
 .footer .single-footer.f-about .copyright-text a:hover {
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .footer .single-footer.f-link li {
@@ -2724,7 +2725,7 @@ ol {
 }
 
 .footer .single-footer.f-link li a:hover {
-  color: #ea0000;
+  color: #ff6b81;
 }
 
 .footer .single-footer h3 {
@@ -2825,7 +2826,7 @@ ol {
 }
 
 .footer .footer-newsletter .title p a {
-  color: #ea0000;
+  color: #ff6b81;
   text-decoration: underline;
 }
 
@@ -2856,6 +2857,7 @@ ol {
   font-size: 14px;
   background-color: #fff3;
   border-radius: 5px;
+  float: right;
   margin-right: 148px;
 }
 
@@ -2934,7 +2936,7 @@ ol {
 
 .footer .footer-newsletter .newsletter-form .button .btn {
   display: inline-block;
-  background: #ea0000;
+  background: #ff6b81;
   color: #fff;
   height: 48px;
   line-height: 48px;
@@ -2946,6 +2948,6 @@ ol {
 }
 
 .footer .footer-newsletter .newsletter-form .button .btn:hover {
-  color: #ea0000;
+  color: #ff6b81;
   background-color: #fff;
 }
