--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2040,7 +2040,7 @@ ol {
 
 .hero-area .hero-content .button .btn {
   background-color: #fff;
-  color: #ff6b81;
+  color: #2c2c2c;
   margin-right: 12px;
 }
 
@@ -2086,7 +2086,7 @@ ol {
   width: 50px;
   line-height: 50px;
   text-align: center;
-  color: #ff6b81;
+  color: #2c2c2c;
   background-color: #fff;
   border-radius: 50%;
   margin-left: 10px;
