--- a/main.css
+++ b/main.css
@@ -48,8 +48,8 @@ button:focus,
 }
 
 .form-check-input:checked {
-  background-color: #ff6b81;
-  border-color: #ff6b81;
+  background-color: #ff3816;
+  border-color: #ff3816;
 }
 
 select {
@@ -898,7 +898,7 @@ ol {
   padding-top: 180px;
   z-index: 2;
   text-align: left;
-  background-color: #ff6b81;
+  background-color: #ff3816;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1042,7 +1042,7 @@ ol {
   font-weight: 600;
   display: block;
   margin-bottom: 8px;
-  color: #ff6b81;
+  color: #ff3816;
   text-transform: uppercase;
 }
 
@@ -1117,7 +1117,7 @@ ol {
   bottom: -1px;
   height: 2px;
   width: 50px;
-  background: #ff6b81;
+  background: #ff3816;
   content: "";
 }
 
@@ -1136,7 +1136,7 @@ ol {
   width: 45px;
   height: 45px;
   line-height: 45px;
-  background: #ff6b81;
+  background: #ff3816;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1233,7 +1233,7 @@ ol {
 
 .pagination .pagination-list li.active a,
 .pagination .pagination-list li:hover a {
-  background: #ff6b81;
+  background: #ff3816;
   color: #fff;
   border-color: transparent;
 }
@@ -1253,7 +1253,7 @@ ol {
   font-size: 15px;
   font-weight: 600;
   padding: 13px 30px;
-  background-color: #ff6b81;
+  background-color: #ff3816;
   color: #fff;
   border: none;
   -webkit-transition: 0.2s;
@@ -1318,7 +1318,7 @@ ol {
 
 .button .btn-alt:hover {
   background-color: #fff !important;
-  color: #ff6b81 !important;
+  color: #ff3816 !important;
 }
 
 .align-left {
@@ -1366,7 +1366,7 @@ ol {
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  background: #ff6b81;
+  background: #ff3816;
   -webkit-animation: preloader-fx 1.6s linear infinite;
   animation: preloader-fx 1.6s linear infinite;
 }
@@ -1438,16 +1438,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ff6b81;
+    color: #ff3816;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1471,7 +1471,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1489,7 +1489,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1499,13 +1499,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ff6b81;
+    color: #ff3816;
   }
 }
 
@@ -1532,16 +1532,16 @@ ol {
     border-radius: 6px;
   }
   .header .navbar .navbar-nav .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar .navbar-nav .nav-item a.active {
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item {
     margin: 0;
   }
   .header .navbar-nav .nav-item:hover a {
-    color: #ff6b81;
+    color: #ff3816;
   }
   .header .navbar-nav .nav-item a {
     padding: 12px 16px !important;
@@ -1565,7 +1565,7 @@ ol {
     padding: 12px 12px;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item a {
     color: #051441;
@@ -1583,7 +1583,7 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li.active {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item .sub-menu .nav-item {
     margin: 0 !important;
@@ -1593,13 +1593,13 @@ ol {
   }
   .header .navbar-nav .nav-item .sub-menu li:hover {
     background: #fff !important;
-    color: #ff6b81 !important;
+    color: #ff3816 !important;
   }
   .header .navbar-nav .nav-item a {
     font-size: 14px;
   }
   .header .navbar-nav .nav-item a:hover {
-    color: #ff6b81;
+    color: #ff3816;
   }
 }
 
@@ -1618,7 +1618,7 @@ ol {
 
 .header .button .btn:hover {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .header .navbar-brand img {
@@ -1648,7 +1648,7 @@ ol {
 }
 
 .header.sticky .button .btn {
-  background-color: #ff6b81;
+  background-color: #ff3816;
   color: #fff;
   border-color: transparent;
 }
@@ -1680,7 +1680,7 @@ ol {
 }
 
 .sticky .navbar .navbar-nav .nav-item a.active {
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .sticky .navbar .navbar-nav .nav-item a {
@@ -1711,7 +1711,7 @@ ol {
 .navbar-area.sticky {
   position: fixed;
   z-index: 99;
-  background: #ff6b81;
+  background: #ff3816;
   -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   -webkit-transition: all 0.3s ease-out 0s;
@@ -1785,7 +1785,7 @@ ol {
 }
 
 .sticky .navbar-nav .nav-item:hover a {
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .navbar-nav .nav-item a {
@@ -1914,7 +1914,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu .nav-item a:hover {
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .navbar-nav .nav-item .sub-menu.left-menu {
@@ -1941,7 +1941,7 @@ ol {
 }
 
 .navbar-nav .nav-item .sub-menu > li.active > a {
-  color: #ff6b81 !important;
+  color: #ff3816 !important;
 }
 
 .navbar-nav .nav-item .sub-menu > li > a {
@@ -2060,7 +2060,7 @@ ol {
 
 .hero-area .hero-content .button .btn.btn-alt:hover {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 @media (max-width: 767px) {
@@ -2242,7 +2242,7 @@ ol {
   line-height: 60px;
   text-align: center;
   display: inline-block;
-  background-color: #ff6b81;
+  background-color: #ff3816;
   color: #fff;
   font-size: 20px;
   border-radius: 7px;
@@ -2265,7 +2265,7 @@ ol {
     Our Achievement CSS
 ========================================*/
 .our-achievement {
-  background-color: #ff6b81;
+  background-color: #2c2c2c;
   text-align: center;
   padding: 130px 0;
 }
@@ -2403,7 +2403,7 @@ ol {
 }
 
 .pricing-table .single-table .table-head .button .btn:hover {
-  background-color: #ff6b81;
+  background-color: #ff3816;
   color: #fff;
 }
 
@@ -2430,7 +2430,7 @@ ol {
 }
 
 .pricing-table .single-table .table-content .table-list li i {
-  color: #ff6b81;
+  color: #ff3816;
   font-size: 14px;
   position: absolute;
   left: 0;
@@ -2441,7 +2441,7 @@ ol {
     Call To Action CSS
 ========================================*/
 .call-action {
-  background-color: #ff6b81;
+  background-color: #2c2c2c;
 }
 
 .call-action .cta-content {
@@ -2506,7 +2506,7 @@ ol {
 
 .call-action .cta-content .button .btn {
   background-color: #fff;
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .call-action .cta-content .button .btn:hover {
@@ -2546,7 +2546,7 @@ ol {
 
 .error-area .error-content h1 {
   font-size: 100px;
-  color: #ff6b81;
+  color: #ff3816;
   margin-bottom: 25px;
   font-weight: 800;
   line-height: 100px;
@@ -2595,7 +2595,7 @@ ol {
 	Footer CSS
 ========================================*/
 .footer {
-  background-color: #081828;
+  background-color: #2c2c2c;
   position: relative;
 }
 
@@ -2681,7 +2681,7 @@ ol {
 }
 
 .footer .single-footer.f-about .social li a:hover {
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .footer .single-footer.f-about .social li:last-child {
@@ -2705,7 +2705,7 @@ ol {
 }
 
 .footer .single-footer.f-about .copyright-text a:hover {
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .footer .single-footer.f-link li {
@@ -2724,7 +2724,7 @@ ol {
 }
 
 .footer .single-footer.f-link li a:hover {
-  color: #ff6b81;
+  color: #ff3816;
 }
 
 .footer .single-footer h3 {
@@ -2825,7 +2825,7 @@ ol {
 }
 
 .footer .footer-newsletter .title p a {
-  color: #ff6b81;
+  color: #ff3816;
   text-decoration: underline;
 }
 
@@ -2934,7 +2934,7 @@ ol {
 
 .footer .footer-newsletter .newsletter-form .button .btn {
   display: inline-block;
-  background: #ff6b81;
+  background: #ff3816;
   color: #fff;
   height: 48px;
   line-height: 48px;
@@ -2946,6 +2946,6 @@ ol {
 }
 
 .footer .footer-newsletter .newsletter-form .button .btn:hover {
-  color: #ff6b81;
+  color: #ff3816;
   background-color: #fff;
 }
